crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan-12.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<a></a < / attr attr=\">\" >"

---
- StartTag:
    name: a
    attributes: []
    self_closing: false
- EndTag: a

