crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan-14.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<a attr=\""

---
- StartTag:
    name: a
    attributes:
      - name: attr
        value: ~
        name_loc:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 7, Ln: 1, Col: 8"
        location:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 9, Ln: 1, Col: 10"
    self_closing: false

