crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan-18.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<!-- nested <!--> text -->"

---
- Comment: " nested <!"
- Text: " text -->"

