crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan-2.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "{{}}"

---
- Interpolation: "{{}}"

