crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan-3.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "{{test}}"

---
- Interpolation: "{{test}}"

